iptables-rules-allow-only-https
# Generated by iptables-save v1.6.0 on Sun Sep  2 22:04:56 2018
*mangle
:PREROUTING ACCEPT [158716:192150313]
:INPUT ACCEPT [158716:192150313]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [108535:8612728]
:POSTROUTING ACCEPT [99877:7944501]
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
-A FORWARD -j DROP
COMMIT
# Completed on Sun Sep  2 22:04:56 2018
# Generated by iptables-save v1.6.0 on Sun Sep  2 22:04:56 2018
*nat
:PREROUTING ACCEPT [302:39362]
:INPUT ACCEPT [188:23782]
:OUTPUT ACCEPT [89246:9371901]
:POSTROUTING ACCEPT [62945:7378447]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Sep  2 22:04:56 2018
# Generated by iptables-save v1.6.0 on Sun Sep  2 22:04:56 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:LOGGING - [0:0]
-A INPUT -s 127.0.1.1/32 -d 127.0.0.1/32 -p udp -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.1.1/32 -p udp -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p udp
-A INPUT -s 8.8.8.8/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -j LOGGING
-A OUTPUT -s 127.0.1.1/32 -d 127.0.0.1/32 -p udp -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.1.1/32 -p udp -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.1.1/32 -p udp
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p udp
-A OUTPUT -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables-Dropped: "
-A LOGGING -j DROP
COMMIT
# Completed on Sun Sep  2 22:04:56 2018
